--- a/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Event/_CreateOrUpdateEvent.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Event/_CreateOrUpdateEvent.cshtml
@@ -3,30 +3,37 @@
 @using SharpFuncExt
 @model BeeFee.WebApplication.Areas.Org.Models.CreateOrUpdateEventModel
 @Html.ValidationSummary(true)
-<div class="create--step is-shown" data-step="1">
-    <div class="create--head">
-        <div class="create--number">1 / 4</div>
-        <div class="create--title">Основная информация</div><a class="create--edit" href="#" data-step-nav="edit">редактировать</a>
-    </div>
+<div class="create--step@(Model.Step <= 1 ? " is-shown" : null)" data-step="1">
+	<div class="create--head">
+		<div class="create--number">1 / 4</div>
+		<div class="create--title">Основная информация</div>
+		<a class="create--edit" href="#" data-step-nav="edit">редактировать</a>
+	</div>
     <div class="create--body">
         <div class="create-container">
             @Html.Partial("_CreateOrUpdateEvent.Info", Model)
         </div>
-        <div class="create--btn">
-            <a class="btn-blue" href="#" data-step-nav="next">Сохранить и перейти к описанию</a>
-        </div>
+		<div class="create--btn">
+			<a class="btn-blue" href="#" data-step-nav="next">Перейти к описанию</a>
+			
+			@*<input type="submit" value="Сохранить и перейти к описанию" class="btn-blue" />*@
+			@*<a class="btn-blue" href="#">Сохранить и опубликовать событие</a>*@
+			@*<a asp-action="ToModerate" style="float: right;margin-top:-35px" class="btn-blue" asp-route-companyId="@Model.CompanyId" asp-route-id="@Model.Id" asp-route-version="@Model.Version">Опубликовать</a>*@
+		</div>
     </div>
 </div>
-<div class="create--step" data-step="2">
+<div class="create--step@(Model.Step == 2 ? " is-shown" : null)" data-step="2">
     <div class="create--head">
         <div class="create--number">2 / 4</div>
-        <div class="create--title">Подробное описание</div><a class="create--edit" href="#" data-step-nav="edit">редактировать</a><a class="create--skip" href="#" data-step-nav="next">пропустить описание</a>
+		<div class="create--title">Подробное описание</div>
+		<a class="create--edit" href="#" data-step-nav="edit">редактировать</a>
+		@*<a class="create--skip" href="#" data-step-nav="next">пропустить описание</a>*@
     </div>
     <div class="create--body">
         <div class="create-container">@Html.Partial("_CreateOrUpdateEvent.Description", Model)</div>
-        <div class="create--btn">
-            <a class="btn-blue" href="#" data-step-nav="next">Сохранить и перейти к настройке регистрации</a>
-        </div>
+		<div class="create--btn">
+			<input type="submit" value="Сохранить и перейти к предпросмотру" class="btn-blue" />
+		</div>
     </div>
 </div>
 @*<div class="create--step" data-step="3" data-url="@Url.Action("LoadSettingFieldsStepCreateOrUpdateEvent")">
@@ -39,15 +46,22 @@
             <div class="create--btn"><a class="btn-blue" href="#" data-step-nav="next">Сохранить и перейти к предпросмотру</a></div>
         </div>
     </div>*@
-<div class="create--step" data-step="4">
+<div class="create--step@(Model.Step == 4 ? " is-shown" : null)" data-step="4">
     <div class="create--head">
-        <div class="create--number">3 / 4</div>
-        <div class="create--title">Предпросмотр</div>
+        <div class="create--number">4 / 4</div>
+		<div class="create--title">Предпросмотр</div>
+		@if (Model is UpdateEventModel)
+		{
+			<a class="create--edit" href="#" data-step-nav="edit">показать</a>
+		}
     </div>
     <div class="create--body">
         <div class="create-container">@Html.Partial("_CreateOrUpdateEvent.Preview", Model)</div>
-        <div class="create--btn">
-            <input type="submit" value="Сохранить событие" class="btn-blue" />@*<a class="btn-blue" href="#">Сохранить и опубликовать событие</a>*@
-        </div>
+		@if (Model is UpdateEventModel)
+		{
+		<div class="create--btn">
+			<a asp-action="ToModerate" class="btn-blue" asp-route-companyId="@Model.CompanyId" asp-route-id="@((Model as UpdateEventModel).Id)" asp-route-version="@((Model as UpdateEventModel).Version)">Опубликовать</a>
+		</div>
+		}
     </div>
 </div>
