--- a/src/BeeFee/UI/BeeFee.WebApplication/Views/Shared/_TopMenu.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Views/Shared/_TopMenu.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="container clearfix">
-	<a class="header--logo" href="#">@*<img src="#" alt="" />*@</a>
+	<a class="header--logo" href="/">@*<img src="#" alt="" />*@</a>
 	<nav class="header--nav hidden-xs">
 		<ul class="header--list">
 			<li class="header--item"><a href="/">События</a></li>
