--- a/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Event/Edit.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Event/Edit.cshtml
@@ -4,20 +4,11 @@
 @{
     ViewData["Title"] = "Редактирование события - " + Model.Name;
 }
-<form asp-action="Edit" asp-controller="Event" asp-route-id="@Model.Id" method="post" class="form-horizontal">
+<form asp-action="Edit" asp-controller="Event" asp-route-id="@Model.Id" asp-route-companyId="@Model.CompanyId" method="post" class="form-horizontal">
     <div class="validation" asp-validation-summary="ModelOnly"></div>
-    <input type="hidden" asp-for="CompanyId" />
     <input type="hidden" asp-for="Version" />
-    <a asp-action="ToModerate" style="float: right;margin-top:-35px" class="btn-blue" asp-route-companyId="@Model.CompanyId" asp-route-id="@Model.Id" asp-route-version="@Model.Version">Опубликовать</a>
     <div class="create">
         @Html.Partial("_CreateOrUpdateEvent", Model)
-
-    </div>
-
-
-    <div class="form-group">
-        @*<input type="submit" value="Save" class="btn" />*@
-        
     </div>
 
     @*@if (Model.Comments.IsNotNull())
