--- a/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Event/_CreateOrUpdateEvent.Preview.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Event/_CreateOrUpdateEvent.Preview.cshtml
@@ -1,9 +1,16 @@
+@using BeeFee.Model.Interfaces
 @using BeeFee.WebApplication.Infrastructure
 @using SharpFuncExt
 @{
     Layout = null;
 }
 @model BeeFee.WebApplication.Areas.Org.Models.CreateOrUpdateEventModel
+<div id="preview">
+	@if (Model.Preview != null)
+	{
+		@Html.Partial("_EventPage", Tuple.Create<IEventPageProjection, object>(Model.Preview, null))
+	}
+</div>
 <div class="create--links">
     @*<div class="create--link">@Html.ActionLink("Предварительный просмотр", "Preview")</div>*@
     @*<div class="create--link"><a href="#">Предпросмотр</a></div>*@
