--- a/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Company/Index.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Company/Index.cshtml
@@ -2,43 +2,45 @@
 @{
     ViewBag.Header = "Мои компании";
 }
-@if (Model.Count > 0)
-{
-    <table>
-        <thead>
-            <tr>
-                <th>Название</th>
-                <th>Url</th>
-                <th>Пользователи</th>
-                <th>События</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var e in Model)
-            {
-                <tr>
-                    <td>@e.Key.Name</td>
-                    <td>@e.Key.Url</td>
-                    <td>@(String.Join("<br/>", e.Key.Users.Select(x => x.User.Name)))</td>
-                    <td><a asp-action="Index" asp-controller="Event" asp-route-id="@e.Key.Id">[@e.Value]</a></td>
-                    <td>
-						<a asp-action="Edit" asp-route-id="@e.Key.Id">Править</a>
-						@if (e.Value == 0)
-						{
-							<a asp-action="Remove" asp-route-id="@e.Key.Id" asp-route-version="@e.Key.Version" onclick="return confirm('Удалить компанию?')">Удалить</a>
-						}
-                    </td>
-                </tr>}
-        </tbody>
-    </table>
-}
+<div class="container">
+	@if (Model.Count > 0)
+	{
+		<table>
+			<thead>
+				<tr>
+					<th>Название</th>
+					<th>Url</th>
+					<th>Пользователи</th>
+					<th>События</th>
+					<th></th>
+				</tr>
+			</thead>
+			<tbody>
+				@foreach (var e in Model)
+				{
+					<tr>
+						<td>@e.Key.Name</td>
+						<td>@e.Key.Url</td>
+						<td>@(String.Join("<br/>", e.Key.Users.Select(x => x.User.Name)))</td>
+						<td><a asp-action="Index" asp-controller="Event" asp-route-id="@e.Key.Id">[@e.Value]</a></td>
+						<td>
+							<a asp-action="Edit" asp-route-id="@e.Key.Id">Править</a>
+							@if (e.Value == 0)
+							{
+								<a asp-action="Remove" asp-route-id="@e.Key.Id" asp-route-version="@e.Key.Version" onclick="return confirm('Удалить компанию?')">Удалить</a>
+							}
+						</td>
+					</tr>}
+			</tbody>
+		</table>
+	}
 
-else
-{
-    <div class="text-center">
-        У Вас не создано ни одной компании
-    </div>
-}
-<br /><br />
-<a asp-action="Add">Добавить компанию</a>
+	else
+	{
+		<div class="text-center">
+			У Вас не создано ни одной компании
+		</div>
+	}
+	<br /><br />
+	<a asp-action="Add">Добавить компанию</a>
+</div>
