--- a/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Event/Index.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Event/Index.cshtml
@@ -43,10 +43,13 @@
 					}
 					else if (e.State == EEventState.Close)
 					{
-
-
 					}
-					else
+					else if (e.State == EEventState.Moderating)
+					{
+						<a asp-action="Preview" asp-route-id="@e.Id" asp-route-companyId="@e.Parent.Id" asp-route-version="@e.Version" class="e-item--btn is-view"></a>
+						<a asp-action="Remove" asp-route-id="@e.Id" asp-route-companyId="@e.Parent.Id" asp-route-version="@e.Version" class="e-item--btn is-delete" onclick="return confirm('Удалить мероприятие?')"></a>
+					}
+					else if (e.State == EEventState.Created || e.State == EEventState.NotModerated)
 					{
 						<a asp-action="Edit" asp-route-id="@e.Id" asp-route-companyId="@e.Parent.Id" class="e-item--btn is-edit"></a>
 						<a asp-action="Preview" asp-route-id="@e.Id" asp-route-companyId="@e.Parent.Id" asp-route-version="@e.Version" class="e-item--btn is-view"></a>
