--- a/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Event/_CreateOrUpdateEvent.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Event/_CreateOrUpdateEvent.cshtml
@@ -1,7 +1,6 @@
+@using BeeFee.Model.Embed
 @using BeeFee.WebApplication.Areas.Org.Models
-@using BeeFee.WebApplication.Infrastructure
-@using SharpFuncExt
-@model BeeFee.WebApplication.Areas.Org.Models.CreateOrUpdateEventModel
+@model CreateOrUpdateEventModel
 @Html.ValidationSummary(true)
 <div class="create--step@(Model.Step <= 1 ? " is-shown" : null)" data-step="1">
 	<div class="create--head">
@@ -57,7 +56,7 @@
     </div>
     <div class="create--body">
         <div class="create-container">@Html.Partial("_CreateOrUpdateEvent.Preview", Model)</div>
-		@if (Model is UpdateEventModel)
+		@if (Model is UpdateEventModel && (Model.Preview.State == EEventState.Created || Model.Preview.State == EEventState.NotModerated))
 		{
 		<div class="create--btn">
 			<a asp-action="ToModerate" class="btn-blue" asp-route-companyId="@Model.CompanyId" asp-route-id="@((Model as UpdateEventModel).Id)" asp-route-version="@((Model as UpdateEventModel).Version)">Опубликовать</a>
