--- a/src/BeeFee/UI/BeeFee.WebApplication/Views/Shared/Error.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Views/Shared/Error.cshtml
@@ -5,6 +5,10 @@
 
 <h1 class="text-danger">Error.</h1>
 <h2 class="text-danger">An error occurred while processing your request.</h2>
+@if (!String.IsNullOrWhiteSpace(Model.Message))
+{
+	<p>@Model.Message</p>
+}
 
 @if (Model != null && Model.ShowRequestId)
 {
