--- a/src/BeeFee/UI/BeeFee.WebApplication/Views/Shared/_LayoutCabinet.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Views/Shared/_LayoutCabinet.cshtml
@@ -1,4 +1,4 @@
-@using BeeFee.WebApplication.Models.Account
+﻿@using BeeFee.WebApplication.Models.Account
 <!DOCTYPE html>
 <html>
 <head>
@@ -15,7 +15,12 @@
 	    <link rel="stylesheet" href="~/lib/trumbowyg/dist/ui/trumbowyg.css" asp-append-version="true" />
 	</environment>
 	<environment exclude="Development">
-		<link rel="stylesheet" href="~/css/siteprofile.min.css" asp-append-version="true" />
+		<link rel="stylesheet" href="~/css/base.css" asp-append-version="true" />
+		<link rel="stylesheet" href="~/css/eventpage.css" asp-append-version="true" />
+		<link rel="stylesheet" href="~/css/validation.css" asp-append-version="true" />
+		<link rel="stylesheet" href="~/css/xdsoft.css" asp-append-version="true" />
+		<link rel="stylesheet" href="~/css/cabinet.css" asp-append-version="true" />
+		<link rel="stylesheet" href="~/lib/trumbowyg/dist/ui/trumbowyg.css" asp-append-version="true" />
 	</environment>
 </head>
 <body>
