--- a/src/BeeFee/UI/BeeFee.WebApplication/Views/Shared/_Pager.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Views/Shared/_Pager.cshtml
@@ -1,8 +1,10 @@
 ﻿@model Core.ElasticSearch.IPager
-
-<ul class="pager">
-	@for (var i = 0; i < Model.Count; i++)
-	{
-		<li class="@(Model.Page == i ? "active" : null)"><a href="?page=@i">@i</a></li>
-	}
-</ul>
+@if (Model.Pages > 1)
+{
+	<ul class="pager">
+		@for (var i = 0; i < Model.Pages; i++)
+		{
+			<li class="@(Model.Page == i ? "active" : null)"><a href="?page=@i">@(i + 1)</a></li>
+		}
+	</ul>
+}
