Add exception handling

--- a/src/BeeFee/UI/BeeFee.WebApplication/Views/Shared/Error.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Views/Shared/Error.cshtml
@@ -3,7 +3,11 @@
     ViewData["Title"] = "Error";
 }
 
-<h1 class="text-danger">Error.</h1>
+<strong>Ой! Ошибка</strong>
+<p>@Model.Message</p>
+
+
+@*<h1 class="text-danger">Error.</h1>
 <h2 class="text-danger">An error occurred while processing your request.</h2>
 @if (!String.IsNullOrWhiteSpace(Model.Message))
 {
@@ -23,4 +27,4 @@
 </p>
 <p>
     <strong>Development environment should not be enabled in deployed applications</strong>, as it can result in sensitive information from exceptions being displayed to end users. For local debugging, development environment can be enabled by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>, and restarting the application.
-</p>
+</p>*@
