--- a/src/BeeFee/UI/BeeFee.WebApplication/Views/Account/Register.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Views/Account/Register.cshtml
@@ -11,6 +11,8 @@
 		{
 			<div class="text-success">
 				@Model.Result
+				
+				<div><a asp-controller="Company" asp-action="Add" asp-area="Org">Создать событие</a></div>
 			</div>
 		}
 		else
