--- a/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Company/Index.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Areas/Org/Views/Company/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="container">
 	@if (Model.Count > 0)
 	{
-		<table>
+		<table width="100%">
 			<thead>
 				<tr>
 					<th>Название</th>
@@ -23,7 +23,7 @@
 						<td>@e.Key.Url</td>
 						<td>@(String.Join("<br/>", e.Key.Users.Select(x => x.User.Name)))</td>
 						<td><a asp-action="Index" asp-controller="Event" asp-route-id="@e.Key.Id">[@e.Value]</a></td>
-						<td>
+						<td align="center">
 							<a asp-action="Edit" asp-route-id="@e.Key.Id">Править</a>
 							@if (e.Value == 0)
 							{
