--- a/src/BeeFee/UI/BeeFee.WebApplication/Views/Shared/_LoginForm.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Views/Shared/_LoginForm.cshtml
@@ -22,6 +22,7 @@
 	<div>@Html.ValidationMessage("error")</div>
 	<div class="modals--submit">
 		<button class="btn is-block" type="submit">Вход</button>
+		<a asp-action="Recover" asp-controller="Account" asp-area="" class="ajax-link">восстановить пароль</a>
 	</div>
 	<div class="modals--socials">
 		<div class="modals--socials-t">Войти через социальную сеть</div>
