--- a/src/BeeFee/UI/BeeFee.WebApplication/Views/Account/Profile.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Views/Account/Profile.cshtml
@@ -21,6 +21,7 @@
 		{
 			<li><a asp-area="Moderator" asp-controller="Event" asp-action="Index">Модерация</a></li>
 		}
+		<li><a asp-area="" asp-controller="Account" asp-action="ChangePassword">Сменить пароль</a></li>
 	</ul>
 	@*<form method="post" class="form-horizontal">
 		<div class="validation" asp-validation-summary="ModelOnly"></div>
