--- a/src/BeeFee/UI/BeeFee.WebApplication/Views/Shared/_LayoutMain.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Views/Shared/_LayoutMain.cshtml
@@ -32,7 +32,7 @@
 <div class="modals">
 	<div class="modals--overlay js-modals-close"></div>
 	<div class="modals--item" id="authModal">
-		<div class="modals--title">Вход и регистрация</div>
+		<div class="modals--title">Вход на сайт</div>
 		<div class="modals--body">
 			@Html.Partial("_LoginForm", new LoginViewModel() { ReturnUrl = "/" })
 		</div>
