--- a/src/BeeFee/UI/BeeFee.WebApplication/Views/Account/Login.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Views/Account/Login.cshtml
@@ -28,6 +28,7 @@
 		<div class="modals--submit">
 			<button class="btn is-block" type="submit">Вход</button>
 			<a asp-action="Recover" asp-controller="Account" asp-area="" class="ajax-link">восстановить пароль</a>
+			<a asp-action="Register" asp-controller="Account" asp-area="" class="ajax-link">зарегистрироваться</a>
 		</div>
 		<div class="modals--socials">
 			<div class="modals--socials-t">Войти через социальную сеть</div>
