--- a/src/BeeFee/UI/BeeFee.WebApplication/Views/Account/Profile.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Views/Account/Profile.cshtml
@@ -9,9 +9,14 @@
 			<li><a asp-area="Admin" asp-controller="Category" asp-action="Index">Категории</a></li>
 			<li><a asp-area="Admin" asp-controller="Users" asp-action="Index">Пользователи</a></li>
 		}
-		@if (User.IsInRole(RoleNames.Organizer))
+		@if (User.IsInRole(RoleNames.MultiOrganizer))
 		{
 			<li><a asp-area="Org" asp-controller="Company" asp-action="Index">Мои компании и события</a></li>
+		}
+		else if (User.IsInRole(RoleNames.Organizer))
+		{
+			<li><a asp-area="Org" asp-controller="Event" asp-action="Index">Мои события</a></li>
+			<li><a asp-area="Org" asp-controller="Company" asp-action="Edit">Профиль организации</a></li>
 		}
 		else if (User.IsInRole(RoleNames.User))
 		{
