--- a/src/BeeFee/UI/BeeFee.WebApplication/Views/Shared/_TopMenuCabinet.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Views/Shared/_TopMenuCabinet.cshtml
@@ -15,7 +15,7 @@
 			else if (User.IsInRole(RoleNames.Organizer))
 			{
 				<li class="header--item"><a asp-area="Org" asp-controller="Event" asp-action="Index">Мои события</a></li>
-				<li class="header--item"><a asp-area="Org" asp-controller="Company" asp-action="EditOne">Профиль орг-ра</a></li>
+				<li class="header--item"><a asp-area="Org" asp-controller="Company" asp-action="Edit">Профиль орг-ра</a></li>
 			}
 			@if (User.IsInRole(RoleNames.EventModerator))
 			{
