--- a/src/BeeFee/UI/BeeFee.WebApplication/Views/Home/Index.cshtml
+++ b/src/BeeFee/UI/BeeFee.WebApplication/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
         <div class="container"><a class="filter--head in-fixed" href="#" data-goto="filter">Все события в городе Екатеринбург в ближайшее время</a></div>
     </div>
 }
-<div class="intro hidden-xs" style="background-image: url(/images/intro.png);">
+<div class="intro hidden-xs" style="background-image: url(/images/intro.jpg);">
     <div class="intro--box">
         <div class="container">
             <div class="intro--title">Создай своё событие</div>
